--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 nbproject
 cases/oscAirfoil/SingleGrid/out
 cases/oscAirfoil/SingleGrid/src/out
+cases/oscAirfoil/UnifiedGrid/out
+cases/oscAirfoil/UnifiedGrid/src/out
 .dep.inc
 *~
 *.a
