modified ADT:search by including adding searchForNIntersections...modified AFT::createNewPoint by searching for nIntersections...This way, assesing inside or outside domain is perfect by using rayCasting...Added some more helper functions to AFT

--- a/cases/oscAirfoil/UnifiedGrid/src/Makefile
+++ b/cases/oscAirfoil/UnifiedGrid/src/Makefile
@@ -1,5 +1,6 @@
 #address = $(CODE_BAKU_SRC)
-address = ../../../../src/
+address1 = ../../../../src/
+address2 = ../../../../src/AFT
 include ${PETSC_DIR}/lib/petsc/conf/variables
 #include ${PETSC_DIR}/lib/petsc/conf/rules
 #include ${PETSC_DIR}/lib/petsc/conf/test
@@ -7,7 +8,8 @@ INC1=${PETSC_DIR}/include
 INC2=${PETSC_DIR}/$(PETSC_ARCH)/include
 CC = g++
 CFLAGS = -c -std=c++11 -O3 -I$(INC1) -I$(INC2)
-LDFLAGS = -L$(address) -Wl,-rpath=$(address)
+LDFLAGS = -L$(address1) -Wl,-rpath=$(address1)
+LDFLAGS += -L$(address2) -Wl,-rpath=$(address2)
 SOURCES=main.cpp\
 	Init/Init.cpp\
 	Init/Read.cpp\
@@ -21,7 +23,7 @@ TARGET = out
 all: $(SOURCES) $(TARGET)
 	
 $(TARGET): $(OBJECTS) 
-	$(CC) $(LDFLAGS) $(OBJECTS) $(PETSC_LIB) -o $@ -lcb
+	$(CC) $(LDFLAGS) $(OBJECTS) $(PETSC_LIB) -o $@ -lcb -lAFT
 
 .cpp.o:
 	$(CC) $(CFLAGS) $< -o $@
